--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -55,7 +55,7 @@
                             <p>Developer with a proven skills to collaborate effectively with senior developers while spending extra time to be mentored. With a passion for both personal growth and for software development, and many more....</p>
 
                             <div class="social-icons">   
-                                <a href="asset/PRAKASH.K.pdf.pdf" class="btn" download="">Downlod cv</a>
+                                <a href="asset/PRAKASH.K.pdf.pdf" class="btn" download>Downlod cv</a>
                             </div>
                         </div>
                         <div class="home-img padd-15">
@@ -118,7 +118,7 @@
                                     <div class="row">
                                         <div class="buttons padd-15">
                                           
-                                            <a href="#contact" /*data-section-index="1"*/ class="btn hire Me">Hire Me </a>
+                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me </a>
                                         </div>
                                     </div>
                                 </div>
