--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -7,9 +7,9 @@
     <title>PRAKASH | Portfolio </title>
     <link rel="stylesheet" href="asset/style.css">
     <link rel="stylesheet" href="asset/skiln/color-1.css">
-  
+
     <link rel="stylesheet" href="asset/style-switcher.css">
-    
+
     <link rel="stylesheet" href="asset/skiln/color-1.css" class="alternate-style" title="class-1" disabled>
     <link rel="stylesheet" href="asset/skiln/color-2.css" class="alternate-style" title="class-2" disabled>
     <link rel="stylesheet" href="asset/skiln/color-3.css" class="alternate-style" title="class-3" disabled>
@@ -35,6 +35,7 @@
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#project"><i class="fa fa-briefcase"></i>Project's</a></li>
                 <li><a href="#service"><i class="fa fa-list"></i>Services</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
@@ -52,10 +53,12 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Prakash</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Full Stack developer </span></h3>
-                            <p>Developer with a proven skills to collaborate effectively with senior developers while spending extra time to be mentored. With a passion for both personal growth and for software development, and many more....</p>
+                            <p>Developer with a proven skills to collaborate effectively with senior developers while
+                                spending extra time to be mentored. With a passion for both personal growth and for
+                                software development, and many more....</p>
 
-                            <div class="social-icons">   
-                                <a href="asset/PRAKASH.K.pdf.pdf" class="btn" download>Downlod cv</a>
+                            <div class="social-icons">
+                                <a href="asset/PRAKASH.K.pdf" class="btn" download>Downlod cv</a>
                             </div>
                         </div>
                         <div class="home-img padd-15">
@@ -81,7 +84,10 @@
                                 <div class="about-text padd-15">
                                     <h3>I'm Prakash <span>Full Stack developer</span></h3>
                                     <p>
-                                        To use my skills and experience in a progressive company where I can tackle challenges, help achieve goals, and grow professionally by learning and innovating. I'm excited about using new technologies and methods to help the company succeed and move my
+                                        To use my skills and experience in a progressive company where I can tackle
+                                        challenges, help achieve goals, and grow professionally by learning and
+                                        innovating. I'm excited about using new technologies and methods to help the
+                                        company succeed and move my
                                         career forward.
 
                                     </p>
@@ -96,7 +102,8 @@
                                         </div>
 
                                         <div class="info-item padd-15">
-                                            <a href="mailto:prakashkandasamy4@gmail.com?subject=Subject%20Here&body=Message%20Here">
+                                            <a
+                                                href="mailto:prakashkandasamy4@gmail.com?subject=Subject%20Here&body=Message%20Here">
                                                 <p>Email : <span>prakash@gmail.com</span></p>
                                             </a>
                                         </div>
@@ -117,7 +124,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                          
+
                                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me </a>
                                         </div>
                                     </div>
@@ -125,7 +132,7 @@
                                 <div class="skills padd-15">
                                     <div class="row">
                                         <div class="skill-item padd-15">
-                                            <h5>HTML</h5>
+                                            <h5>HTML/CSS</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 89%;"></div>
                                                 <div class="skill-percent">89%</div>
@@ -133,23 +140,23 @@
                                         </div>
 
                                         <div class="skill-item padd-15">
-                                            <h5>CSS</h5>
+                                            <h5>React</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 75%;"></div>
-                                                <div class="skill-percent">75%</div>
+                                                <div class="progress-in" style="width: 65%;"></div>
+                                                <div class="skill-percent">65%</div>
                                             </div>
                                         </div>
 
                                         <div class="skill-item padd-15">
-                                            <h5>JavaScript</h5>
+                                            <h5>Node.js/ Express.js</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 50%;"></div>
-                                                <div class="skill-percent">50%</div>
+                                                <div class="progress-in" style="width: 60%;"></div>
+                                                <div class="skill-percent">60%</div>
                                             </div>
                                         </div>
 
                                         <div class="skill-item padd-15">
-                                            <h5>React Js</h5>
+                                            <h5>Mongodb</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 60%;"></div>
                                                 <div class="skill-percent">60%</div>
@@ -171,8 +178,9 @@
                                                         <i class="fa fa-calendar"></i> 2019 - 2023
                                                     </h3>
                                                     <h4 class="timeline-title">Bachelor of Technology</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo velit consectetur illo, tempore, dolorem quae, dolor ipsam suscipit provident ipsa totam dolore voluptatem. Fugiat aliquid, fuga voluptates
-                                                        voluptatem tempore cumque!
+                                                    <p class="timeline-text">IT covers a wide range of topics including
+                                                        software development, database management, web development, and
+                                                        IT infrastructure management.
                                                     </p>
                                                 </div>
 
@@ -182,8 +190,10 @@
                                                         <i class="fa fa-calendar"></i> 2018 - 2019
                                                     </h3>
                                                     <h4 class="timeline-title"> HSC</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo velit consectetur illo, tempore, dolorem quae, dolor ipsam suscipit provident ipsa totam dolore voluptatem. Fugiat aliquid, fuga voluptates
-                                                        voluptatem tempore cumque!
+                                                    <p class="timeline-text"> This stream typically includes subjects
+                                                        like Physics, Chemistry, Mathematics, and Computer Science. It's
+                                                        ideal for students interested in pursuing careers in engineering
+                                                        fields.
                                                     </p>
                                                 </div>
 
@@ -193,8 +203,10 @@
                                                         <i class="fa fa-calendar"></i> 2016 - 2017
                                                     </h3>
                                                     <h4 class="timeline-title"> SSLC </h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo velit consectetur illo, tempore, dolorem quae, dolor ipsam suscipit provident ipsa totam dolore voluptatem. Fugiat aliquid, fuga voluptates
-                                                        voluptatem tempore cumque!
+                                                    <p class="timeline-text">In various countries, passing the SSLC exam
+                                                        is a significant milestone as it signifies the completion of
+                                                        basic education and prepares students for further academic
+                                                        pursuits or entry into the workforce.
                                                     </p>
                                                 </div>
                                             </div>
@@ -208,6 +220,69 @@
                 </div>
             </section>
             <!--===========About section End================-->
+
+
+            <!--===========Project section Start================-->
+            <section class="portfolio section" id="project">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Project's</h2>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="portfolio-heading padd-15">
+                            <h2>My last Project's</h2>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <!--==========Projects card=============--->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="asset/img/HCB.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!--==========Projects card=============--->
+
+                         <!--==========Projects card=============--->
+                         <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="asset/img/PC.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!--==========Projects card=============--->
+
+                         <!--==========Projects card=============--->
+                         <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="asset/img/Bus-Route.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!--==========Projects card=============--->
+
+                         <!--==========Projects card=============--->
+                         <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="asset/img/clg.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!--==========Projects card=============--->
+
+                    </div>
+                </div>
+            </section>
+            <!--===========Project section End ================-->
+
 
             <!--===========Service section Start================-->
             <section class="service section" id="service">
@@ -244,7 +319,8 @@
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
                                 <h4> Software Development </h4>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit.</p>
+                                <p>Build Responsive websites using the right technology stacks that align with your
+                                    business objectives.</p>
                             </div>
                         </div>
 
@@ -306,7 +382,8 @@
 
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fab fa-whatsapp"></i></div>
-                            <a href="https://api.whatsapp.com/send?phone=9865579294&text=Hello,%20more%20information!" target="_blank">
+                            <a href="https://api.whatsapp.com/send?phone=9865579294&text=Hello,%20more%20information!"
+                                target="_blank">
                                 <h4>Whatsapp</h4>
                                 <p>Chat with me</p>
                             </a>
@@ -344,13 +421,15 @@
                                 <div class="row">
                                     <div class="form-item col-6 padd-15">
                                         <div class="form-group">
-                                            <input type="text" name="user_name" class="form-control" placeholder="Name" id="contact-name">
+                                            <input type="text" name="user_name" class="form-control" placeholder="Name"
+                                                id="contact-name">
                                         </div>
                                     </div>
 
                                     <div class="form-item col-6 padd-15">
                                         <div class="form-group">
-                                            <input type="email" name="user_email" class="form-control" placeholder="Email" id="contact-email">
+                                            <input type="email" name="user_email" class="form-control"
+                                                placeholder="Email" id="contact-email">
                                         </div>
                                     </div>
                                 </div>
@@ -358,7 +437,8 @@
                                 <div class="row">
                                     <div class="form-item col-12 padd-15">
                                         <div class="form-group">
-                                            <input type="text" name="user_subject" class="form-control" placeholder="Subject" id="contact-subject">
+                                            <input type="text" name="user_subject" class="form-control"
+                                                placeholder="Subject" id="contact-subject">
                                         </div>
                                     </div>
                                 </div>
@@ -366,7 +446,8 @@
                                 <div class="row">
                                     <div class="form-item col-12 padd-15">
                                         <div class="form-group">
-                                            <textarea name="user_project" class="form-control" placeholder="Message" id="contact-project"></textarea>
+                                            <textarea name="user_project" class="form-control" placeholder="Message"
+                                                id="contact-project"></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -391,8 +472,8 @@
         <!---==============main content End==============-->
 
     </div>
-      <!--===============Style Switcher start==================-->
-      <div class="style-switcher ">
+    <!--===============Style Switcher start==================-->
+    <div class="style-switcher ">
         <div class="style-switcher-toggler s-icon">
             <i class="fas fa-cog fa-spin"></i>
         </div>
@@ -408,12 +489,15 @@
             <span class="color-5" onclick="setActiveStyle('class-5')" title="Class 5"></span>
         </div>
     </div>
-<!--================Style switch End=====================-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!--================Style switch End=====================-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"
+        integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="asset/script.js"></script>
     <script src="asset/style-switcher.js"></script>
 
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </body>
 
 </html>
