--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -221,7 +221,6 @@
             </section>
             <!--===========About section End================-->
 
-
             <!--===========Project section Start================-->
             <section class="portfolio section" id="project">
                 <div class="container">
@@ -298,8 +297,8 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
-                                <h4> Mobile Application </h4>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit.</p>
+                                <h4> Web Application </h4>
+                                <p>web applications are hosted on remote servers and can be accessed from any device with a compatible web browser.</p>
                             </div>
                         </div>
 
@@ -308,8 +307,8 @@
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
                                 </div>
-                                <h4> Web Development </h4>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit.</p>
+                                <h4>  UI/UX Development </h4>
+                                <p>UI development involves designing the visual elements of a digital product, including layout, colors, typography, icons, and other graphical assets. </p>
                             </div>
                         </div>
 
@@ -324,35 +323,7 @@
                             </div>
                         </div>
 
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-mobile-alt"></i>
-                                </div>
-                                <h4> Mobile Application </h4>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit.</p>
-                            </div>
-                        </div>
 
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-code"></i>
-                                </div>
-                                <h4> Web Development </h4>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit.</p>
-                            </div>
-                        </div>
-
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
-                                <div class="icon">
-                                    <i class="fa fa-laptop-code"></i>
-                                </div>
-                                <h4> Software Development </h4>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit.</p>
-                            </div>
-                        </div>
 
                     </div>
                 </div>
